<resources>
    <string name="app_name">永烁科技</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">功能键</string>

    <string name="action_settings">设置</string>

    <string name="title_section1">图表</string>
    <string name="title_section2">产品</string>
    <string name="title_section3">更多</string>

    <string name="action_about">关于</string>
    <string name="reload">重载页面</string>
    <string name="clear_cache">清除缓存</string>
    <string name="quit_page">往后一页</string>
    <string name="browser">浏览器</string>
    <string name="nonsupport">您要离开当前页面吗？</string>
    <string name="ignore">忽略</string>
    <string name="close">离开</string>
    <string name="menu">菜单</string>
    <string name="stop">暂停</string>
    <string name="hide">隐藏</string>
    <string name="begin">开始</string>
    <string name="testable">可检测性</string>
    <string name="enter">点此进入</string>
    <string name="pull">拖动可查看更多</string>
    <string name="min">最小化</string>
    <string name="arrows">⇂     ⇂     ⇂     ⇂     ⇂     ⇂     ⇂     ⇂     ⇂     ⇂     ⇂     ⇂</string>
    <string name="none"/>
    <string name="testing">测试测试</string>
    <string name="range">幅度</string>
    <string name="legend">图例：</string>
    <string name="off">退出程序</string>
    <string name="action_exit">退出</string>
    <string name="CH0">CH0</string>
    <string name="CH1">CH1</string>
    <string name="stetting">设置</string>
    <string name="last_page">已是最后一页！</string>
    <string name="net_err">请检查网络后重试</string>
    <string name="none_page">找不到网页</string>
    <string name="cleaned">已清理</string>
    <string name="login">个人</string>
    <string name="theme">切换主题</string>
    <string name="back">后退</string>
    <string name="base_set">基本设置</string>
    <string name="other_set">其他设置</string>
    <string name="more">更多</string>
    <string name="nothing"/>
    <string name="gov">访问官网</string>
    <string name="release">检查更新</string>
    <string name="doublexit">再按一次退出</string>
    <string name="statement">科技，呵护健康！</string>
    <string name="toshare">分享</string>
    <string name="choice">请选择要拨打的客服号码：</string>
    <string name="phone1">15347168966</string>
    <string name="phone2">15764238097</string>
    <string name="cancel">取消</string>
    <string name="product1">产品1</string>
    <string name="product2">产品2</string>
    <string name="product3">产品3</string>
    <string name="product4">产品4</string>
    <string name="products">敬请期待</string>
    <string name="ble_not_supported">您的设备不支持BLE</string>
    <string name="openbt">打开蓝牙</string>
    <string name="requestbt">使用前请开启蓝牙服务！</string>
    <string name="search">搜索</string>
    <string name="share">分享</string>

    <string name="label_data">数据:</string>
    <string name="label_device_address">设备地址:</string>
    <string name="label_state">状态:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

</resources>
