<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <item
        android:id="@+id/ab_search"
        android:orderInCategory="80"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_share"
        android:orderInCategory="90"
        app:actionProviderClass="android.support.v4.widget.ShareActionProvider"
        app:showAsAction="ifRoom"
        android:title="@string/share"
        tools:ignore="UnusedAttribute" />

    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_about"
          android:title="@string/action_about"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_exit"
        android:title="@string/action_exit"
        android:orderInCategory="100"
        app:showAsAction="never"/>
</menu>
